--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@vitest/coverage-v8": "^2.1.4",
     "@vitest/ui": "^2.1.4",
+    "prettier": "^3.4.2",
     "vite": "^5.0.0",
     "vitest": "^2.1.4"
   },
