--- a/package.json
+++ b/package.json
@@ -13,8 +13,12 @@
     "format": "prettier . --write"
   },
   "devDependencies": {
+    "@eslint/js": "^9.17.0",
     "@vitest/coverage-v8": "^2.1.4",
     "@vitest/ui": "^2.1.4",
+    "eslint": "^9.17.0",
+    "eslint-plugin-react": "^7.37.3",
+    "globals": "^15.14.0",
     "prettier": "^3.4.2",
     "vite": "^5.0.0",
     "vitest": "^2.1.4"
